# scripts

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  asdf-latest.fish  biome.json  gandi_domain_search.py  get_audiofile_data.py  ghc.sh  gmail_downloader.py  mise.toml  nightwatch.conf.cjs  package.json  pyproject.toml  remove_imperfect_albums.py  scripts.py  sixkcd.bash  sixkcd.fish  splitme.sh  tsconfig.json
.claude/: settings.local.json
.cursor/rules/: bash.mdc  cloudflare.mdc  firebase.mdc  nuxt-ui.mdc
.github/: copilot-instructions.md  dependabot-n.yml  dependabot-o.yml  dependabot.yml  dependabot.yml.bak
.github/ISSUE_TEMPLATE/: config.yml  content-request.md  content_request.md  general.md  issue_template.md
.github/workflows/: aaisp-exporter.yaml  envhunter.yaml  hath.yaml  netflow.yaml  webdummy.yaml
.trunk/: trunk.yaml
.trunk/configs/: .shellcheckrc  biome.json
baseline/: .gitignore  .gitmodules  CLAUDE.md  CLAUDE.template.md  README.md  RULES.md  SCRATCHPAD.md  biome.json  mise.toml  package.json  tsconfig-standard.json  tsconfig.json
baseline/_github/: protect-main.json
baseline/docs/: README.md  SCRATCHPAD.md
code/swipe/: .env.example  .gitignore  README.md  main.py  pyproject.toml
code/swipe/src/swipe/: main.py
configuration/biome/: biome.json
configuration/claude/: CLAUDE.md
configuration/copilot/: copilot-instructions-nuxt.md
configuration/mcp/: claude-desktop.json  cline.json  config.json  cursor.json  goose.schema.json  goose.yaml  vscode.json  windsurf.json
demos/daisyui/: index.html
dng-jpeg-detect/: pyproject.toml
dng-jpeg-detect/data/: fake.dng
dng-jpeg-detect/dng_jpeg_detect/: __init__.py
docs/: BUMP.md
gandi-domain-search/: pyproject.toml
gandi-domain-search/gandi_domain_search/: __init__.py
gandi_domain_search/: __init__.py
get-audiofile-data/: README.md  main.py
ghc/: ghc.sh
gmail-downloader/: .env.example  README.md
gmail-downloader/gmail_downloader/: __init__.py  main.py
mastodon-maintenance/: maint.sh  mastodon-maintenance.sh
mixed/netflow/: .gitignore  Dockerfile  LOCAL-LOCAL.html  LOCAL-LOCAL.md  README.md  docker-compose.yaml  docker-compose.yml  geoip.bash  ntopng.bash  ntopng.conf  setup.py
music/: abfr_settings.abfr_preset  commands.md  history.dave-i9mbp.txt  history.dave-mba.txt  yate_settings.plist
music/get-audiofile-data/: README.md  main.py  pyproject.toml
planning/linear-shortcut/: linear-shortcut.mmd
planning/panopticon/: panopticon-architecture.mmd  panopticon-components.mmd
portmaster/: portmaster.rb  ports.json
projects/aaisp-exporter/: .editorconfig  .gitignore  .goreleaser.yaml  CLAUDE.md  Dockerfile  README.md  go.mod  go.sum  main.go  mise.toml
projects/alt/: package.json
projects/bump/: .gitignore  README.md  package.json  tsconfig.json
projects/dnstool/: cloudflare-env.d.ts  mise.toml  next.config.ts  open-next.config.ts  package.json  wrangler.jsonc
projects/envhunter/: Dockerfile  Gemfile
projects/hath/: README.md
projects/keycheck/: package.json
projects/mcp/: mcp-template-processor.ts  mcp.ts  validate-mcp-templates.ts
projects/mikrotik/: PBR.md  README.md
projects/movietool/: mise.toml
projects/neocities/: mise.toml  package.json
projects/netflow/: README.md  docker-compose.original.yml  docker-compose.qnap.template.yml  docker-compose.template.yml  docker-compose.yml
projects/rails-template/: CONTRIBUTING.md  Dockerfile  _irbrc  (+11 more)
python/gmail-downloader/: .env.example  LICENSE  mise.toml  pyproject.toml  setup.py
python/gmail-downloader/gmail_downloader/: main.py
python/orphaned-xmp/: pyproject.toml
python/orphaned-xmp/orphaned_xmp/: cli.py
remove-imperfect-albums/: pyproject.toml
shell/: asdf-latest.fish
(+459 files in other folders)
