[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Various scripts"
authors = ["Dave Williams <dave@dave.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mutagen = "^1.47.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
