[project]
name = "swipe"
version = "0.1.0"
description = "A multithreaded Python tool for safely deleting all objects from S3-compatible storage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.38.39",
  "click>=8.2.1",
  "python-dotenv>=1.1.0",
  "rich>=14.0.0",
]

[project.scripts]
swipe = "swipe.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
