[tool.poetry]
name = "get-audiofile-data"
version = "0.1.0"
description = "Get audio bit depth and sample rate"
authors = ["Dave Williams <dave@dave.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mutagen = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
