[project]
name = "orphaned-xmp"
version = "0.1.0"
description = "Find orphaned XMP sidecars"
authors = [{ name = "Dave Williams", email = "dave@dave.io" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["rich (>=13.9.4,<14.0.0)"]

[project.scripts]
orphaned-xmp = "orphaned_xmp.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [{ include = "orphaned_xmp" }]
